--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,16 @@
             <artifactId>jcommander</artifactId>
             <version>1.69</version>
         </dependency>
+        <dependency>
+            <groupId>eu.wdaqua</groupId>
+            <artifactId>hdt-java-core</artifactId>
+            <version>2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.wdaqua</groupId>
+            <artifactId>hdt-jena</artifactId>
+            <version>2.0</version>
+        </dependency>
     </dependencies>
 
 </project>
