--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>hdt-jena</artifactId>
             <version>2.0</version>
         </dependency>
+        <dependency>
+            <groupId>eu.wdaqua</groupId>
+            <artifactId>hdt-jena</artifactId>
+            <version>2.1</version>
+        </dependency>
     </dependencies>
 
 </project>
